--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.3.4",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
+    "next-superjson-plugin": "^0.5.7",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
