--- a/.env
+++ b/.env
@@ -13,3 +13,4 @@ GITHUB_SECRET=92d8b7b2d11caa9277ca641395d03151cd37b813
 GOOGLE_CLIENT_ID=172415222093-ku239bos6tajguiprin6327qrhbo3s6e.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dnllewfdo
