--- a/.env
+++ b/.env
@@ -14,3 +14,7 @@ GOOGLE_CLIENT_ID=172415222093-ku239bos6tajguiprin6327qrhbo3s6e.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dnllewfdo
+
+NEXT_PUBLIC_PUSHER_APP_KEY=5a91fbb9f3a29836a6f8
+PUSHER_APP_ID=1595675
+PUSHER_SECRET=7b268498bad6e570a77a
