--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "date-fns": "^2.30.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "lodash": "^4.17.21",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.10.0",
     "next-superjson-plugin": "^0.5.7",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -36,10 +39,12 @@
     "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/lodash": "^4.14.194",
     "prisma": "^4.13.0"
   }
 }
